Bubblewrap launcher doesn't bind font locations from XDG_DATA_DIRS https://bugs.webkit.org/show_bug.cgi?id=237089

Patch by Liliana Marie Prikler <liliana.prikler@gmail.com> on 2022-02-23
Reviewed by Michael Catanzaro.

* UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::bindFonts): Expose font directories present in the
XDG_DATA_DIRS environment variable.


Canonical link: https://commits.webkit.org/247709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290395 268f45cc-cd09-0410-ab3c-d52691b4dbfc